# VoiceMark

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  eslint.config.js  index.html  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: implement-streaming-transcription.md
docs/: PROJECT_STATUS.md
docs/architecture/: ARCHITECTURE.md  README.md
docs/decisions/: ADR-0001-engine-choice.md  ADR-0001-product-scope.md  ADR-0002-transcription-engine.md  ADR-001-docs-first-approach.md  ADR-002-offline-first-architecture.md  ADR-003-markdown-storage.md  ADR-004-docker-agent-development.md  ADR-005-ui-shell-implementation.md  ADR-006-real-mic-default.md  ADR-007-rust-sidecar.md  README.md
docs/diagrams/: COMPONENTS.mmd  README.md  SYSTEM_CONTEXT.mmd  system-overview.md
docs/functional/: FUNCTIONAL_REQUIREMENTS.md  PRD.md  README.md  UI_SPEC_V0_1.md
docs/technical/: CALIBRATION_PROCESS.md  DOCKER_FOR_AGENTS.md  NORMALISATION_RULES.json  README.md  STREAMING_TRANSCRIPTION_PLAN.md  TECHNICAL_OVERVIEW.md  TECHNICAL_SPEC.md  VOICE_COMMANDS.md  docker-setup.md
scripts/: backup.sh
sidecar/: Cargo.toml  README.md
sidecar/models/: README.md
sidecar/resources/ffmpeg/: README.md
sidecar/scripts/: fetch-ffmpeg.sh
sidecar/src/: audio.rs  main.rs  stream.rs  transcribe.rs
specs/: API_SURFACE.md  COMMAND_SURFACE.md  README.md  v0.1-ui-spec.md
src/: App.tsx  README.md
src/asr/: applyFinalToEditor.test.ts  applyFinalToEditor.ts  events.ts  pcmAudioProcessor.worklet.ts  recordingAsr.incremental.test.ts  recordingAsr.ts  simulatedAsr.test.ts  simulatedAsr.ts  spacingIntegration.test.ts  streamingAsr.ts  textBuffer.test.ts  textBuffer.ts
src/components/: Editor.tsx  EditorPlaceholder.tsx  Footer.tsx  Header.tsx  TranscriptPanel.tsx
src/editor/: applyToTiptap.ts  ops.ts  sentence.test.ts  sentence.ts
src/styles/: global.css
src/voice/: asrRouting.test.ts  commandExtraction.integration.test.ts  extractVoiceMarkCommand.test.ts  extractVoiceMarkCommand.ts  parseInlineVoiceMark.test.ts  (+8 more)
(+5 files in other folders)
